samples/_failures_safe/1761796650_aa0b35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80debf41.c: In function ‘main’:
./samples/SAFE/__tmp_80debf41.c:161:5: error: expected expression at end of input
  161 |     if (choice ==
      |     ^~
./samples/SAFE/__tmp_80debf41.c:161:5: error: expected declaration or statement at end of input
